demo-yaml-dir/demo-h5/demo-h5-vault.yaml
# Copyright 2019 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# istio-springboot-demo-a service
##################################################################################################
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: httpbin
# ---
apiVersion: v1
kind: Service
metadata:
  name: demo-istio-h5
  labels:
    app: demo-istio-h5
    service: demo-istio-h5
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: demo-istio-h5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-istio-h5-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-istio-h5
      version: v1
  template:
    metadata:
      labels:
        app: demo-istio-h5
        version: v1
    spec:
      serviceAccountName: istio-demo    
      containers:
      - image: demo-istio-h5:v1.0
        imagePullPolicy: IfNotPresent
        name: demo-istio-h5
        ports:
        - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-istio-h5-latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-istio-h5
      version: latest
  template:
    metadata:
      labels:
        app: demo-istio-h5
        version: latest
    spec:
      serviceAccountName: istio-demo    
      containers:
      - image: demo-istio-h5:latest
        imagePullPolicy: IfNotPresent
        name: demo-istio-h5
        ports:
        - containerPort: 80
