demo-yaml-dir/demo-h5/demo-h5-gateway-multiversion.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-istio-h5-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "demoh5.istiodemos.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo-istio-h5-dr
spec:
  host: demo-istio-h5
  trafficPolicy:
    loadBalancer:
        simple: LEAST_CONN
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: latest
    labels: 
      version: latest
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-istio-h5-vs
spec:
  hosts:
  - "demoh5.istiodemos.com"
  gateways:
  - demo-istio-h5-gateway
  http:
  - match:
    - queryParams:
        v:
          exact: v1
          # regex: ae\d+$
    route:
    - destination:
        host: demo-istio-h5
        subset: v1
  - route:
    - destination:
        host: demo-istio-h5
        subset: latest
